k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testk8s
  namespace: default
  labels:
    app: testk8s
    component: backend
spec:
  selector: 
    app: testk8s
  type: NodePort
  ports:
    - name: http
      port: 8080
      targetPort: http
      nodePort: 30000
      protocol: TCP
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  name: testk8s-headless
  namespace: default
  labels:
    app: testk8s
    component: backend
spec:
  selector: 
    app: testk8s
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
